test/langtools/tools/javac/specialConstantFolding/ReflectiveErrorTest.out
ReflectiveErrorTest.java:11:56: compiler.err.reflective.error: ofDescriptor, java.lang.sym.MethodTypeRef, Invalid parameter type: ^
1 error
